  - Added the :confval:`latex_docclass` config value and made the
    "twoside" documentclass option overridable by "oneside".
  - Added the :confval:`trim_doctest_flags` config value, which is true
    by default.
  - Added :confval:`html_show_copyright` config value.
  - Added :confval:`latex_show_pagerefs` and :confval:`latex_show_urls`
    config values.

* New builders:

  - Added a builder for the Epub format.
  - Added a builder for manual pages.
  - Added a single-file HTML builder.

* HTML output:

  - Inline roles now get a CSS class with their name, allowing styles to
    customize their appearance.  Domain-specific roles get two classes,
    ``domain`` and ``domain-rolename``.
  - References now get the class ``internal`` if they are internal to
    the whole project, as opposed to internal to the current page.
  - External references can be styled differently with the new
    ``externalrefs`` theme option for the default theme.
  - In the default theme, the sidebar can experimentally now be made
    collapsible using the new ``collapsiblesidebar`` theme option.
  - #129: Toctrees are now wrapped in a ``div`` tag with class
    ``toctree-wrapper`` in HTML output.
  - The :data:`toctree` callable in templates now has a ``maxdepth``
    keyword argument to control the depth of the generated tree.
  - The :data:`toctree` callable in templates now accepts a
    ``titles_only`` keyword argument.
  - Added ``htmltitle`` block in layout template.
  - In the JavaScript search, allow searching for object names including
    the module name, like ``sys.argv``.
  - Added new theme ``haiku``, inspired by the Haiku OS user guide.
  - Added new theme ``nature``.
  - Added new theme ``agogo``, created by Andi Albrecht.
  - Added new theme ``scrolls``, created by Armin Ronacher.
  - #193: Added a ``visitedlinkcolor`` theme option to the default
    theme.
  - #322: Improved responsiveness of the search page by loading the
    search index asynchronously.
