@@ -16,21 +16,21 @@ ALLSPHINXOPTS = -d _build/doctrees $(PAPEROPT_$(PAPER)) \
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
-	@echo "  html      to make standalone HTML files"
-	@echo "  dirhtml   to make HTML files called index.html in directories"
+	@echo "  html       to make standalone HTML files"
+	@echo "  dirhtml    to make HTML files called index.html in directories"
 	@echo "  singlehtml to make one big HTML file"
-	@echo "  text      to make text files"
-	@echo "  man       to make manual pages"
-	@echo "  pickle    to make pickle files"
-	@echo "  json      to make json files"
-	@echo "  htmlhelp  to make HTML files and a HTML help project"
-	@echo "  qthelp    to make Qt help files and project"
-	@echo "  devhelp   to make Devhelp files and project"
-	@echo "  epub      to make an epub file"
-	@echo "  latex     to make LaTeX files, you can set PAPER=a4 or PAPER=letter"
-	@echo "  latexpdf  to make LaTeX files and run pdflatex"
-	@echo "  changes   to make an overview over all changed/added/deprecated items"
-	@echo "  linkcheck to check all external links for integrity"
+	@echo "  text       to make text files"
+	@echo "  man        to make manual pages"
+	@echo "  pickle     to make pickle files"
+	@echo "  json       to make json files"
+	@echo "  htmlhelp   to make HTML files and a HTML help project"
+	@echo "  qthelp     to make Qt help files and project"
+	@echo "  devhelp    to make Devhelp files and project"
+	@echo "  epub       to make an epub file"
+	@echo "  latex      to make LaTeX files, you can set PAPER=a4 or PAPER=letter"
+	@echo "  latexpdf   to make LaTeX files and run pdflatex"
+	@echo "  changes    to make an overview over all changed/added/deprecated items"
+	@echo "  linkcheck  to check all external links for integrity"
 
 clean:
 	-rm -rf _build/*
