@@ -81,6 +81,9 @@ Features added
   - Added :confval:`html_show_copyright` config value.
   - Added :confval:`latex_show_pagerefs` and :confval:`latex_show_urls`
     config values.
+  - The behavior of :confval:`html_file_suffix` changed slightly: the
+    empty string now means "no suffix" instead of "default suffix", use
+    ``None`` for "default suffix".
 
 * New builders:
 
